* Removed calls to deprecated OpenMP functions (!662)
* If directory does not exist during script execution, CMD_DIR_NOT_FOUND is returned (!628)
* Refactored processing of sequence operations that generate multiple output sequences (!739)
* Added a memory check for the preview image (#778)
* Removed Windows cross-build CI and improved performance of native CI (!767)

siril 1.2.6
01/22/25
* Fixed sign error in messier catalog (#1453)
* Fixed Save As feature (#1452)
* Fixed handling widechar with an updated version of cfitsio (#1456)
* Changed configuration directory on macOS to org.siril.Siril (!798)

siril 1.2.5
11/22/24
* Fixed crash in gaussVertical() on macOS (issue reported on pixls.us, !742)
* Fixed free space disk computation on macOS, probably for good (#1368 and #1375 and #1422)
* Fixed crash if the CWD changes after a first successfull Automated light Curve process (#1378 !746)
* Fixed bug in TIFF files that have TIFFTAG_MINSAMPLEVALUE and TIFFTAG_MAXSAMPLEVALUE set to 0 by removing these tags (#1381)
* Added HISTORY after seqcrop and GUI crop (#1142)
* Better handling of Siril opening when double-clicking on an image, under macOS (#1308, #1428 and #1140)
* Fixed potential crash in synthstar (issue reported via facebook)

siril 1.2.4
09/11/24

* Fixed CFA statistics (#1342)
* Fixed calibration command bug disabling cosmetic correction (#1348)
* Fixed calibration GUI not parsing correcting flat when using path parsing (#1348)
* Fixed non-deterministic parallel subsky RBF (#1352)
* Fixed incorrect deconvolution command arg setting (issue raised on pixls.us)
* Fixed GHT and HT not reverting previews from other dialogs (#1356)
* Fixed crash when saving image (#1353)
* Fixed execute button in wavelets not reverting preview (#1362)
* Fixed CLAHE crash on mono image (#1354)
* Fixed crash while extracting Green channel on CFA FITSEQ (#1305)
* Fixed inverted sequences on exporting to SER (#1361)